2004-05-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-dump-extra): Check only 300 bytes at the top of
	the data.

2004-05-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-image-type-from-data): New function.  Suggested
	by KOSEKI Yoshinori <kose@meadowy.org>.

	* w3m.el (w3m-w3m-dump-extra): Use it.

2004-05-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el (w3m-process-start-process): Use
	set-process-query-on-exit-flag if it is available.

	* w3m.el (w3m-w3m-dump-extra): Trust the magic at the beginning of
	image data rather than the content-type header.

2004-05-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-copy-buffer): Prefer cached contents without
	checking their validity.

2004-05-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-spiegel.el (shimbun-rss-build-message-id): Use
	shimbun-replace-in-string instead of replace-regexp-in-string.

2004-05-08  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmoslove.el: Removed it since contents would not be
	updated anymore.

2004-05-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-emacswiki.el (shimbun-emacswiki-groups): Add `changes'.
	(shimbun-get-headers): Rewrite articles' URLs only when the
	current group is `diff'.

	* shimbun/sb-heise.el (shimbun-heise-get-newsticker-headers):
	(shimbun-heise-get-telepolis-headers): Takes an argument
	`shimbun', to suppress byte-compile warnings.
	(shimbun-get-headers): Follow the above changes.

2004-05-07  David Hansen  <david.hansen@gmx.net>

	* shimbun/sb-emacswiki.el:
	* shimbun/sb-heise.el:
	* shimbun/sb-spiegel.el: New files.

	* shimbun/sb-bbc.el (shimbun-bbc-content-start): Relaxed.

2004-05-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-atmarkit.el (shimbun-atmarkit-content-end): Updated
	to follow the change of the site design.

	* shimbun/shimbun.el (shimbun-index-url): Define its default
	method.

	* shimbun/sb-bbc.el (shimbun-index-url)