@@ -1,3 +1,10 @@
+2004-05-12  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-w3m-dump-extra): Examine image data briefly to
+	detect only gif, jpeg and png by itself.
+
+	* w3m-util.el (w3m-image-type-from-data): Abolish.
+
 2004-05-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (w3m-w3m-dump-extra): Check only 300 bytes at the top of
